--- a/style.css
+++ b/style.css
@@ -1,38 +1,10 @@
-* {
+body {
     padding: 0;
     margin: 0;
-}
-#container {
-    width: 500px;
-    height: 200px;
-    border: 1px solid cornflowerblue;
-}
-#player {
-    width: 20px;
-    height: 50px;
-    background-color: gray;
-    position: relative;
-    top: 150px;
-}
-.animate {    
-    animation: jump 1.5s;
-}
-@keyframes jump {
-    0%{top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
-    100%{top: 150px;}
-}
-#block {
-    width: 20px;
-    height: 20px;
-    background-color: darkgreen;
-    position: relative;
-    top: 130px;
-    left: 480px;
-    animation: block 2s infinite linear;
-}
-@keyframes block {
-    0%{left:480px;}
-    100%{left:-40px;}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: lightslategray;
 }
