--- a/style.css
+++ b/style.css
@@ -8,3 +8,31 @@ body {
     height: 100vh;
     background-color: lightslategray;
 }
+
+.container {
+    width: 800px;
+    max-width: 80%;
+    background-color: lightseagreen;
+    padding: 10px;
+    border-radius: 5px; 
+}
+
+.button-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.button {
+    background-color: cornflowerblue;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 5px 10px;
+    color: white;
+    outline: none;
+}
+
+button:hover {
+    border-color: black;
+}
