--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* *add font family */
 body {
     padding: 0;
     margin: 0;
@@ -21,7 +22,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 10px;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .button {
@@ -35,4 +36,14 @@ body {
 
 button:hover {
     border-color: black;
+}
+
+.controls {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
 }
